# shipthing

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: shipthing-client.rs
proto/shipthing/v1/: player_api.proto
src/: config.rs  handler.rs  main.rs  main_loop.rs  proto.rs  renderer.rs  server.rs  state.rs
