[package]
name = "shipthing"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
failure = "0.1.7"
find_folder = "0.3.0"
futures = "0.3.4"
hex = "0.4.2"
log = "0.4.8"
palette = "0.5.0"
piston_window = "0.108.0"
pretty_env_logger = "0.4.0"
prost = "0.6.1"
rand = "0.7.3"
sprite = "0.2.4"
tokio = { version = "0.2.18", features = ["full"] }
tonic = { version = "0.1.1", features = ["tls", "prost"] }
uuid = { version = "0.8.1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.1.1"
